@@ -111,3 +111,6 @@ Aggiunti metodi DB per la mappatura delle query su oggetti DTO
 
 [20/09/2021] - 5.0.33 - Simone Pelaia
 Fix bug query mappata che non ritorna ultimo campo db
+
+[20/09/2021] - 5.0.34 - Simone Pelaia
+Fix bug query mappata su campi nullable + ottimizzazione
